--- a/app/page.module.css
+++ b/app/page.module.css
@@ -1,28 +1,36 @@
 .main {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
-  padding: 6rem;
+  padding: 4rem;
   min-height: 100vh;
+  max-width: 36rem;
+  margin: 0 auto;
+  gap: 1.6rem;
+}
+
+.text-main {
+  width: 100%;
+  font-size: 32px;
+  font-weight: bolder;
 }
 
 /* hr */
 
 .hr-lines {
-  margin: 100px auto;
   text-align: center;
   display: grid;
   grid-template-columns: 1fr auto 1fr;
   align-items: center;
   color: var(--text-color-light);
+  width: 100%;
 }
 
 .hr-lines:before,
 .hr-lines:after {
   content: "";
   border: 0.8px solid var(--border-color-base);
-  width: 18vw;
 }
 
 .hr-lines:before {
@@ -35,22 +43,10 @@
 
 /* form */
 
-.passwordContainer {
-  position: relative;
-}
-
-.passwordWrapper {
-  position: relative;
-}
-
-.forgetPassword {
-  position: absolute;
-  top: -20px; /* Adjust the value as needed */
-  left: 0;
-  font-size: 12px; /* Adjust the font size as needed */
-  color: #888; /* Adjust the color as needed */
-  cursor: pointer;
-  /* Add other styles as needed */
+.button-link {
+  display: block;
+  width: 100%;
+  text-decoration: none;
 }
 
 /* Enable hover only on non-touch devices */
