--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,7 @@
 :root {
   --max-width: 1100px;
   --border-radius: 12px;
+  --opacity-input-disabled: 0.5;
   --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono",
     "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro",
     "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
@@ -8,18 +9,38 @@
   --background-base: #fefefe;
 
   --text-color: #000;
+  --text-color-medium: #2b2b2b;
   --text-color-light: #7e7e7e;
+
+  --blue-icon-color: #4285f4;
 
   --border-color-base: #cbcaca;
 
   --box-shadow-hover: 0 4px 6px rgba(0, 0, 0, 0.1);
   --box-shadow-active: 0 2px 4px rgba(0, 0, 0, 0.1);
+
+  --box-shadow-dark-hover: 0 6px 12px rgba(0, 0, 0, 0.2);
+  --box-shadow-dark-active: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+:read-only {
+  cursor: default;
+}
+
+:disabled {
+  opacity: var(--opacity-input-disabled);
+  cursor: not-allowed;
 }
 
 * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+}
+
+*::before,
+*::after {
+  box-sizing: inherit;
 }
 
 html,
@@ -31,4 +52,5 @@ body {
 body {
   color: var(--text-color);
   background: var(--background-base);
+  font-style: var(--font-mono);
 }
