--- a/components/google-auth/google-auth-button.module.css
+++ b/components/google-auth/google-auth-button.module.css
@@ -8,11 +8,10 @@
   min-width: 100%;
   margin-top: 1.25rem;
   padding: 0.8rem;
-  letter-spacing: 0.05rem;
-  border-radius: 625rem;
+  border-radius: 1.563rem;
   cursor: pointer;
   font-weight: bolder;
-  font-size: 14px;
+  font-size: 16px;
   text-align: center;
   transition: background-color 0.3s, box-shadow 0.3s;
 }
@@ -30,4 +29,8 @@
 .button:active,
 .button:focus {
   box-shadow: var(--box-shadow-active);
+}
+
+.text-highlighted:hover {
+  color: var(--blue-icon-color);
 }
