--- a/app/globals.css
+++ b/app/globals.css
@@ -16,6 +16,8 @@
 
   --border-color-base: #cbcaca;
 
+  --error-color: #ff3d00;
+
   --box-shadow-hover: 0 4px 6px rgba(0, 0, 0, 0.1);
   --box-shadow-active: 0 2px 4px rgba(0, 0, 0, 0.1);
 
