--- a/components/auth/auth-form.module.css
+++ b/components/auth/auth-form.module.css
@@ -24,13 +24,13 @@
   margin-top: 0.8rem;
 }
 
-.form-input[type="email"],
+.form-input[type="text"],
 .form-input[type="password"] {
   color: var(--text-color-medium);
   font-size: 16px;
 }
 
-.form-input[type="email"]:focus,
+.form-input[type="text"]:focus,
 .form-input[type="password"]:focus {
   border: 1px solid var(--blue-icon-color);
   outline: none;
@@ -72,5 +72,15 @@
 
 .password-recovery-link:hover,
 .form-signup-link:hover {
-  text-shadow: var(--border-color-base) 1px 0 8px;
+  text-shadow: var(--border-color-base) 1px 0 0.5rem;
+}
+
+.error {
+  color: var(--error-color);
+  font-size: 14px;
+  margin-top: 0.25rem;
+}
+
+.errorInput {
+  border-color: var(--error-color);
 }
