feat(nav): Implement main navigation header component with nested layout and styling

--- a/app/globals.css
+++ b/app/globals.css
@@ -18,9 +18,10 @@
 
   --error-color: #ff3d00;
 
+  --button-header-color: #de3434;
+
   --box-shadow-hover: 0 4px 6px rgba(0, 0, 0, 0.1);
   --box-shadow-active: 0 2px 4px rgba(0, 0, 0, 0.1);
-
   --box-shadow-dark-hover: 0 6px 12px rgba(0, 0, 0, 0.2);
   --box-shadow-dark-active: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
