--- a/app/globals.css
+++ b/app/globals.css
@@ -7,6 +7,7 @@
     "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
 
   --background-base: #fefefe;
+  --background-blog-section: #f7f7f7;
 
   --text-color: #000;
   --text-color-medium: #2b2b2b;
@@ -49,6 +50,7 @@
 html,
 body {
   max-width: 100vw;
+  max-height: 100vh;
   overflow-x: hidden;
 }
 
