--- a/components/main-navigation/main-navigation.module.css
+++ b/components/main-navigation/main-navigation.module.css
@@ -2,7 +2,7 @@
   width: 100%;
   height: 4rem;
   background-color: var(--background-base);
-  box-shadow: var(--box-shadow-active);
+  box-shadow: var(--box-shadow-dark-active);
   display: flex;
   justify-content: flex-end;
   align-items: center;
