--- a/components/auth/form-auth-button.module.css
+++ b/components/auth/form-auth-button.module.css
@@ -23,3 +23,22 @@
 .button:focus {
   box-shadow: var(--box-shadow-dark-active);
 }
+
+.loader {
+  border: 2px solid var(--text-color-light);
+  border-top: 2px solid var(--text-color);
+  border-radius: 50%;
+  width: 1.1rem;
+  height: 1.1rem;
+  animation: spin 2s linear infinite;
+  margin-right: 0.7rem;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
