--- a/components/google-auth/google-auth-button.module.css
+++ b/components/google-auth/google-auth-button.module.css
@@ -16,7 +16,7 @@
   transition: background-color 0.3s, box-shadow 0.3s;
 }
 
-.icon {
+.google-icon {
   display: flex;
   align-items: center;
   margin-right: 0.6rem;
